Ticket 2 abgeschlossen: Loader + Validator + Tests stabil, Parquet-Wrapper integriert

--- a/notebooks/02_test_kpis_real_data.ipynb
+++ b/notebooks/02_test_kpis_real_data.ipynb
@@ -23,10 +23,10 @@
     "import sys\n",
     "import os\n",
     "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), '..')))\n",
-    "from src.data_loader import load_prices\n",
+    "from data.loader import load_prices\n",
     "from src.returns import Returns\n",
     "from src.kpis import KPI\n",
-    "from src.riskfree import RiskFreeRate"
+    "from rates.riskfree import RiskFreeRate"
    ]
   },
   {
