--- a/notebooks/Untitled.ipynb
+++ b/notebooks/Untitled.ipynb
@@ -11,9 +11,8 @@
     "import os\n",
     "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), '..')))\n",
     "import importlib\n",
-    "import src.riskfree\n",
-    "importlib.reload(src.riskfree)\n",
-    "from src.riskfree import RiskFreeRate"
+    "import rates.riskfree\n",
+    "importlib.reload(rates.riskfree)"
    ]
   },
   {
