--- a/notebooks/04_strategy_tests.ipynb
+++ b/notebooks/04_strategy_tests.ipynb
@@ -21,15 +21,11 @@
     "import sys\n",
     "import os\n",
     "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), '..')))\n",
-    "from src.data_loader import load_prices\n",
+    "from data.loader import load_prices\n",
     "from src.returns import Returns\n",
     "from src.kpis import KPI\n",
-    "from src.riskfree import RiskFreeRate\n",
-    "from src.strategies import Strategies\n",
-    "\n",
-    "import vectorbt as vbt \n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
+    "from rates.riskfree import RiskFreeRate\n",
+    "from src.strategies import Strategies\n"
    ]
   },
   {
@@ -116,10 +112,10 @@
      "evalue": "'PlotAccessor' object has no attribute 'show'",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[20], line 10\u001b[0m\n\u001b[0;32m      8\u001b[0m report_sma \u001b[38;5;241m=\u001b[39m KPI\u001b[38;5;241m.\u001b[39mget_kpi_report(port_ret_sma, risk_free_rate\u001b[38;5;241m=\u001b[39mrf)\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28mprint\u001b[39m(report_sma)\n\u001b[1;32m---> 10\u001b[0m \u001b[43mport_ret_sma\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mplot\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mshow\u001b[49m()\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'PlotAccessor' object has no attribute 'show'"
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[20], line 10\u001B[0m\n\u001B[0;32m      8\u001B[0m report_sma \u001B[38;5;241m=\u001B[39m KPI\u001B[38;5;241m.\u001B[39mget_kpi_report(port_ret_sma, risk_free_rate\u001B[38;5;241m=\u001B[39mrf)\n\u001B[0;32m      9\u001B[0m \u001B[38;5;28mprint\u001B[39m(report_sma)\n\u001B[1;32m---> 10\u001B[0m \u001B[43mport_ret_sma\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mplot\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mshow\u001B[49m()\n",
+      "\u001B[1;31mAttributeError\u001B[0m: 'PlotAccessor' object has no attribute 'show'"
      ]
     }
    ],
