--- a/notebooks/04_strategy_tests.ipynb
+++ b/notebooks/04_strategy_tests.ipynb
@@ -21,10 +21,10 @@
     "import sys\n",
     "import os\n",
     "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), '..')))\n",
-    "from data.loader import load_prices\n",
+    "from data.load_raw import load_prices\n",
     "from src.returns import Returns\n",
     "from src.kpis import KPI\n",
-    "from rates.riskfree import RiskFreeRate\n",
+    "from features.riskfree_interest import RiskFreeRate\n",
     "from src.strategies import Strategies\n"
    ]
   },
