--- a/notebooks/Untitled.ipynb
+++ b/notebooks/Untitled.ipynb
@@ -11,8 +11,8 @@
     "import os\n",
     "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), '..')))\n",
     "import importlib\n",
-    "import rates.riskfree\n",
-    "importlib.reload(rates.riskfree)"
+    "import features.riskfree_interest\n",
+    "importlib.reload(features.riskfree_interest)"
    ]
   },
   {
