--- a/notebooks/allgemeine_tests.ipynb
+++ b/notebooks/allgemeine_tests.ipynb
@@ -46,7 +46,7 @@
     "import os\n",
     "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), '..')))\n",
     "import yfinance as yf\n",
-    "from rates.riskfree import RiskFreeRate\n",
+    "from features.riskfree_interest import RiskFreeRate\n",
     "\n",
     "# Beispielzeitreihe\n",
     "start_date = \"2015-01-01\"\n",
