--- a/notebooks/02_test_kpis_real_data.ipynb
+++ b/notebooks/02_test_kpis_real_data.ipynb
@@ -23,10 +23,10 @@
     "import sys\n",
     "import os\n",
     "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), '..')))\n",
-    "from data.loader import load_prices\n",
+    "from data.load_raw import load_prices\n",
     "from src.returns import Returns\n",
     "from src.kpis import KPI\n",
-    "from rates.riskfree import RiskFreeRate"
+    "from features.riskfree_interest import RiskFreeRate"
    ]
   },
   {
